# distrikt-sdl

./: .gitignore  .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt
engine/include/engine/: asset.h  engine.h  input.h  object.h  render.h  scene.h  util.h
engine/include/engine/component/: debugrender.h  solidrender.h  spriterender.h
engine/src/: asset.c  engine.c  input.c  object.c  render.c  scene.c  util.c
engine/src/component/: debugrender.c  solidrender.c  spriterender.c
src/: CMakeLists.txt  common.h  main.c
src/prefab/: chunk.c  chunk.h  player.c  player.h  tile.c  tile.h
src/scene/game/: scene.c  scene.h
src/scene/menu/: scene.c  scene.h
